--- a/README.Rmd
+++ b/README.Rmd
@@ -2,8 +2,6 @@
 output: github_document
 ---
 
-<!-- README.md is generated from README.Rmd. Please edit that file -->
-
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
@@ -13,44 +11,25 @@ knitr::opts_chunk$set(
 )
 ```
 
-# timefitteR
+# timefitteR - A library for exploring longitudinal data
 
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 [![CRAN status](https://www.r-pkg.org/badges/version/timefitteR)](https://CRAN.R-project.org/package=timefitteR)
 <!-- badges: end -->
 
-The goal of timefitteR is to ...
+Determining the most appropriate model to fit to longitudinal data, particularly when there are multiple indicator variables to be considered alongside time data, can be a tricky problem. timefitteR has been developed to help test and compare multiple linear models for the researcher so that they can make an informed decision about what to include and what to exclude. There are two fundamental principles underpinning the use of this package:
+1. Occam's Razor - When applied to developing models this can be interpreted as the simplest model that can predict the observed data should be preferred.
+1. Statistical Reasonableness - By this we mean that any changes to models developed by timefitteR should be statistically significant (they should not be the result of chance), statistically meaningful (they should have a noticeable effect on the quality of the predicted outcomes), and they should be theoretically plausible (there should be some mechanism that can be hypothesised to mediate the effect seen between the variables).
+
+This package provides functions to generate semi-deterministic time series synthetic data-sets to test various approaches as well as the functions needed to explore that data.  This package is in active development and should be treated as alpha software.
 
 ## Installation
 
 You can install the development version of timefitteR like so:
 
 ``` r
-# FILL THIS IN! HOW CAN PEOPLE INSTALL YOUR DEV PACKAGE?
+devtools::install_github("DrJPK/timefitteR")
 ```
 
-## Example
-
-This is a basic example which shows you how to solve a common problem:
-
-```{r example}
-library(timefitteR)
-## basic example code
-```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
+## Examples
